	* Fix the namespace URL we look for in PEP reply stanzas to match the URL
	  used in the 'get' requests (Paul Aurich)
	* XMPP resources can be set to the local machine's hostname by using
	  __HOSTNAME__ as the resource string (Jonathan Sailor)
	* XMPP resources can now be left blank, causing the server to generate a
	  resource for us (Jonathan Sailor)
	* XMPP resources now default to no value

	Pidgin:
	* On GTK+ 2.14 and higher, we're using the gtk-tooltip-delay setting
	  instead of our own (hidden) tooltip_delay pref.  If you had
	  previously changed that pref, add a line like this to
	  ~/.purple/gtkrc-2.0 (where 500 is the timeout (in ms) you want):
	      gtk-tooltip-timeout = 500
	  To completely disable tooltips (e.g. if you had an old tooltip_delay
	  of zero), add this to ~/.purple/gtkrc-2.0:
	      gtk-enable-tooltips = 0
	* Moved the release notification dialog to a mini-dialog in the
	  buddylist.  (Thanks to Casey Ho)

	Finch:
	* Allow binding meta+arrow keys for actions.


version 2.5.2 (10/19/2008):
	libpurple:
	* Fixed a crash on removing a custom buddy icon on a buddy.
	* Fixed a crash caused by certain self-signed SSL certificates.
	* Enable a number of strong ciphers which were previously disabled
	  when using NSS.  (Thanks to Marcus Trautwig.)

	Pidgin:
	* The status selector now saves your message when changing status.
	* Fix a case where a conversation window could close unexpectedly.
	* A mute sounds option has been added to the preferences window to
	  help with discoverability.  CTRL+S is no longer bound to mute.
	* Added ability to change the color of visited links (using the theme
	  control plugin, or setting the color in ~/.gtkrc-2.0)
	* Fix a crash occuring when a custom smiley is deleted and re-added and
	  used in an open conversation after being re-added.

	Finch:
	* A new 'Nested Grouping' option in the 'Grouping' plugin. Group
	  hierarchies are defined by the '/' character in the group names.